# python-multem

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  lgtm.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: conda.yml  python-package.yml  python-publish.yml
cmake/: FindFFTW.cmake
conda/: environment.yaml  meta.yaml
examples/: Au110Crystal.py  Si001Crystal.py  SrTiO3001Crystal.py  cu001_crystal.py  example_incident_wave_1.py  run.py  run_CBED.py  run_HAADF.py  run_HRTEM.py  run_STEM.py  run_multi_multislice.py
src/multem/: __init__.py  masker.h  multem_ext.cc  multem_ext.cu  multem_ext.h
tests/: test_cpp.py  test_crystal_parameters.py  test_ice_potential_approximation.py  test_input.py  test_output.py  test_stem_detector.py  test_system_configuration.py
